[tool.poetry]
name = "decli"
version = "0.5.2"
description = "Minimal, easy-to-use, declarative cli tool"
authors = ["Santiago Fraire <santiwilly@gmail.com>"]
license = "MIT"
readme = 'README.rst'

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
ipython = "^7.16"
ipdb = "^0.13"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^0.921"
codecov = "^2.1"
ruff = "^0.0.263"

[tool.ruff]
line-length = 88
ignore = [
    "E501",
    "D1",
    "D415",
]

[tool.ruff.isort]
known-first-party = ["commitizen", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.2"
files = [
    "decli/__init__.py:__version",
    "pyproject.toml:version"
]
tag_format = "v$version"
